@@ -675,9 +675,9 @@ class MavenPomDownloaderTest implements RewriteTest {
             assertThat(merged.getVersioning().getSnapshot().getBuildNumber()).isEqualTo("223");
             assertThat(merged.getVersioning().getVersions()).hasSize(4).contains("2.3.2", "2.3.3", "2.4.1", "2.4.2");
             assertThat(merged.getVersioning().getSnapshotVersions()).hasSize(2);
-            assertThat(merged.getVersioning().getSnapshotVersions().get(0).getExtension()).isNotNull();
-            assertThat(merged.getVersioning().getSnapshotVersions().get(0).getValue()).isNotNull();
-            assertThat(merged.getVersioning().getSnapshotVersions().get(0).getUpdated()).isNotNull();
+            assertThat(merged.getVersioning().getSnapshotVersions().getFirst().getExtension()).isNotNull();
+            assertThat(merged.getVersioning().getSnapshotVersions().getFirst().getValue()).isNotNull();
+            assertThat(merged.getVersioning().getSnapshotVersions().getFirst().getUpdated()).isNotNull();
         }
 
         @Test
@@ -1311,7 +1311,7 @@ class MavenPomDownloaderTest implements RewriteTest {
                           </dependency>
                       </dependencies>
                   </project>
-        """).toList().get(0);
+        """).toList().getFirst();
         MavenResolutionResult resolutionResult = doc.getMarkers().findFirst(MavenResolutionResult.class).orElseThrow();
         resolutionResult = resolutionResult.resolveDependencies(new MavenPomDownloader(Collections.emptyMap(), new InMemoryExecutionContext(), null, null), new InMemoryExecutionContext());
         List<ResolvedDependency> deps = resolutionResult.getDependencies().get(Scope.Compile);
